objects/OAH_Order__c.object
<CustomObject>
    <label>OAH Order</label>
    <nameField>
        <displayFormat>Order{YYYY}{0000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAH Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BFO</fullName>
                    <label>FO</label>
                </value>
                <value>
                    <fullName>HOFO</fullName>
                </value>
                <value>
                    <fullName>HORO</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Date__c</fullName>
        <label>Mailing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Record_ID__c</fullName>
        <label>Old Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAH_Case_Number__c</fullName>
        <label>OAH Case Number</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Orders</relationshipLabel>
        <relationshipName>OAH_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Issuance__c</fullName>
        <label>Date of Issuance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Board_Approval_Date__c</fullName>
        <label>Board Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BFO_Transmittal_Date__c</fullName>
        <label>BFO Transmittal Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_custom</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Date_of_Issuance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>